# R-type-mirror

./: .clang-format  .clang-tidy  .clangd  .dockerignore  .gitignore  CMakeLists.txt  DOCUMENTATION_SUMMARY.md  Dockerfile  PHASE3_VERIFICATION.md  PLAYER_ALLY_COLLISION_FIX.md  README.md  START_HERE.md  build.sh  conan_profile  conan_profile_ci  conanbuild.sh  conanbuildenv-release-x86_64.sh  conanfile.txt  conanrun.sh  conanrunenv-release-x86_64.sh  deactivate_conanbuild.sh  deactivate_conanrun.sh  imgui.ini  server_log.txt  settings.json  valgrind.txt
assetEditor/: .gitignore  CMakeLists.txt  DEVELOPER.md  README.md  setup_font.sh  setup_imgui.sh
assetEditor/include/: Doxygen.h  Doxygen.hpp  EditorState.h  EditorState.hpp  JsonEditor.h  JsonEditor.hpp  MainMenu.h  MainMenu.hpp  SpriteEditor.h  SpriteEditor.hpp  Style.h  Style.hpp
assetEditor/src/: EditorState.cpp  JsonEditor.cpp  MainMenu.cpp  SpriteEditor.cpp  Style.cpp  main.cpp
client/: CMakeLists.txt  ModuleLoader.hpp
client/assets/: README.md
client/assets/collisions/: cave_map.tmx  factory_map.tmx  ruins.json  ruins_map.tmx
client/assets/font.opf/: license.txt  readme.txt
client/include/: AssetPath.hpp  AudioManager.hpp  Client.hpp  ColorBlindFilter.hpp  GameMessage.capnp  KeyToLabel.hpp  MenuCommon.hpp  Settings.hpp  client.hpp
client/include/input/: IInputManager.hpp
client/include/rendering/: IRenderManager.hpp
client/include/systems/: AnimationDriverSystem.hpp  AnimationSystem.hpp  NetworkReceiveSystem.hpp  NetworkSendSystem.hpp
client/interface/: Color.hpp  Geometry.hpp  IAudio.hpp  ICamera.hpp  ICollision.hpp  IColorBlindSupport.hpp  IInput.hpp  IRender.hpp  IRenderer.hpp  IShape.hpp  IText.hpp  ITexture.hpp  ITime.hpp  IWindow.hpp  KeyCodes.hpp
client/modules/: CMakeLists.txt
client/modules/SDL2/: RendererSDL2.cpp  RendererSDL2.hpp  sdl_plugin.cpp
client/modules/SFML/: RendererSFML.cpp  RendererSFML.hpp  sfl_plugin.cpp
client/src/: AudioManager.cpp  ChatUI.cpp  ChatUI.hpp  Client.cpp  Game.cpp  Game.hpp  LobbyRoomState.cpp  LobbyRoomState.hpp  Menu.cpp  Menu.hpp  Overlay.cpp  Overlay.hpp  ParallaxBackground.cpp  ParallaxBackground.hpp  PlayingState.cpp  PlayingState.hpp  Settings.cpp  client.cpp  main.cpp
client/src/Menu/: LoadingScreen.cpp  LoadingScreen.hpp  MenuState.hpp  ProcessInputMenu.cpp  RenderMenus.cpp
client/src/helper/: KeyToLabel.cpp
client/src/infomode/: InfoCategory.cpp  InfoCategory.hpp  InfoMode.cpp  InfoMode.hpp
client/src/systems/: NetworkReceiveSystem.cpp  NetworkSendSystem.cpp
docs/: HOME.md  (+18 more)
engineCore/: CMakeLists.txt
engineCore/examples/: CMakeLists.txt  SystemManagerExample.cpp
engineCore/include/ecs/: ComponentManager.hpp  ComponentSignature.hpp  ComponentStorage.hpp  EngineComponents.hpp  Entity.hpp  EntityManager.hpp  IComponentStorage.hpp  ISystem.hpp  SystemManager.hpp  World.hpp
engineCore/src/ecs/: World.cpp
engineCore/tests/: .clang-tidy  CMakeLists.txt  ComponentManagerTests.cpp  ComponentSignatureTests.cpp  ComponentStorageTests.cpp  EntityManagerTests.cpp  EntityTests.cpp  SystemManagerTests.cpp  SystemTest.cpp  WorldTests.cpp
engine_core/: CMakeLists.txt
engine_core/examples/: CMakeLists.txt
engine_core/include/ecs/: ComponentManager.hpp  ComponentSignature.hpp  ComponentStorage.hpp  Entity.hpp  EntityManager.hpp  IComponentStorage.hpp  Registry.hpp  Signature.hpp  System.hpp
engine_core/src/: Registry.cpp
engine_core/src/ecs/: Registry.cpp  World.cpp
engine_core/tests/: CMakeLists.txt
flappyBird/client/: CMakeLists.txt
flappyBird/client/src/: Game.cpp  Game.hpp  Lobby.cpp  Lobby.hpp  Menu.cpp  Menu.hpp  main.cpp
flappyBird/server/: CMakeLists.txt
flappyBird/server/include/: Game.hpp
flappyBird/server/src/: Game.cpp  main.cpp
modules/: CMakeLists.txt
modules/SDL2/: RendererSDL2.cpp  RendererSDL2.hpp
network/: CMakeLists.txt
network/docs/: network_class_diagram.drawio  network_sequence_diagram.drawio
network/include/: ANetworkManager.hpp  AsioClient.hpp  AsioServer.hpp  CapnpHandler.hpp  GameMessage.capnp  GameMessage.capnp.c++  GameMessage.capnp.h  INetworkManager.hpp  IPacketHandler.hpp  NetworkConfig.hpp  asioClient.hpp  asioServer.hpp  capnpHandler.hpp  messageQueue.hpp  networkManager.hpp  packetHandler.hpp
network/src/: ANetworkManager.cpp  AsioClient.cpp  AsioServer.cpp  CapnpHandler.cpp  asioClient.cpp  asioServer.cpp  capnpHandler.cpp  networkManager.cpp  packetHandler.cpp
network/tests/: CMakeLists.txt  Test_robustness.cpp  Test_server_concurrency.cpp  Test_server_stress.cpp
server/: CMakeLists.txt
server/config/: QUICKSTART.md  README.md  SPAWN_EXAMPLES.md  enemies.json  levels.json  ship_stats.json
server/include/: Difficulty.hpp  Game.hpp  GameMessage.capnp  Lobby.hpp  LobbyManager.hpp  Server.hpp  ServerSystems.hpp  TestMode.hpp  WorldLobbyRegistry.hpp  server.hpp
server/include/ai/: AI_ARCHITECTURE.md  AVOIDANCE_FIX_PLAN.md  AllyAI.hpp  AllyAIUtility.hpp  AllyBehavior.hpp  AllyPerception.hpp  PHASE3_ENHANCEMENTS.md  PHASE3_SUMMARY.md  PRIORITY_AVOIDANCE_FIX.md  TESTING_GUIDE.md
server/include/chat/: Chat.hpp
server/include/config/: EnemyConfig.hpp  LevelConfig.hpp  ShipStatsConfig.hpp
server/include/network/: main.hpp
server/include/systems/: AISystem.hpp  AllySystem.hpp  AttractionSystem.hpp  ChargeSystem.hpp  CollisionSystem.hpp  DamageSystem.hpp  DeathSystem.hpp  EnemyAISystem.hpp  EntityLifetimeSystem.hpp  FollowerSystem.hpp  ISystem.hpp  InputMovementSystem.hpp  InvulnerabilitySystem.hpp  LevelProgressSystem.hpp  LifetimeSystem.hpp  MapCollisionSystem.hpp  NetworkReceiveSystem.hpp  NetworkSendSystem.hpp  PlayerAnimationSystem.hpp  PowerupSystem.hpp  RubanAnimationSystem.hpp  ScoreSystem.hpp  ShootingSystem.hpp  SpawnSystem.hpp
server/protocol/: example.capnp
server/src/: Game.cpp  Lobby.cpp  LobbyManager.cpp  Server.cpp  WorldLobbyRegistry.cpp  main.cpp  server.cpp
server/src/ai/: AllyAI.cpp  AllyAIUtility.cpp  AllyBehavior.cpp  AllyPerception.cpp
server/src/chat/: Chat.cpp
tests/: CMakeLists.txt  entity_kind_compile.cpp  test_server_concurrency.cpp
(+124 files in other folders)
